--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -531,6 +531,8 @@
                                 <TextBox Grid.Column="0" x:Name="textbox_Display_Contrast" IsEnabled="False" Text="{Binding ElementName=slider_Display_Contrast, Path=Value}"/>
                                 <Slider Grid.Column="1" x:Name="slider_Display_Contrast" Margin="10,0,0,0" ValueChanged="slider_Display_Contrast_ValueChanged"/>
                             </Grid>
+
+                            <!-- Saturation -->
                             <TextBlock Text="Saturation" Margin="0,10,0,0"/>
                             <Grid>
                                 <Grid.ColumnDefinitions>
@@ -540,6 +542,12 @@
                                 <TextBox Grid.Column="0" x:Name="textbox_Display_Saturation" IsEnabled="False" Text="{Binding ElementName=slider_Display_Saturation, Path=Value}"/>
                                 <Slider Grid.Column="1" x:Name="slider_Display_Saturation" Margin="10,0,0,0" ValueChanged="slider_Display_Saturation_ValueChanged"/>
                             </Grid>
+
+                            <!-- HDCP Support -->
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="If High-bandwidth Digital Content Protection (HDCP) is disabled on this display, digitally protected content may be unplayable, or played at a lower resolution."/>
+                                <ToggleSwitch x:Name="toggleswitch_HDCPSupport" Margin="10,0,0,0" OffContent="HDCP Support" OnContent="HDCP Support" Toggled="toggleswitch_HDCPSupport_Toggled"/>
+                            </StackPanel>
                         </StackPanel>
 
                         <!-- Info -->
