--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -543,6 +543,15 @@
                                 <Slider Grid.Column="1" x:Name="slider_Display_Saturation" Margin="10,0,0,0" ValueChanged="slider_Display_Saturation_ValueChanged"/>
                             </Grid>
 
+                            <!-- Vari-Bright -->
+                            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Vari-Bright saves power by adaptively adjusting the display brightness based on image content."/>
+                                <ToggleSwitch x:Name="toggleswitch_VariBright" Margin="10,0,0,0" OffContent="Vari-Bright" OnContent="Vari-Bright" Toggled="toggleswitch_VariBright_Toggled"/>
+                            </StackPanel>
+
+                            <!-- Vari-Bright Level -->
+                            <ComboBox x:Name="combobox_Display_VariBright_Level" Header="Vari-Bright Level" Width="300" Margin="0,10,0,0" SelectionChanged="combobox_Display_VariBright_Level_SelectionChanged"/>
+
                             <!-- HDCP Support -->
                             <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
                                 <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="If High-bandwidth Digital Content Protection (HDCP) is disabled on this display, digitally protected content may be unplayable, or played at a lower resolution."/>
