--- a/AmdDriverTool/App.xaml
+++ b/AmdDriverTool/App.xaml
@@ -28,9 +28,13 @@
             </Style>
 
             <Style x:Name="ApplicationListBoxItem" TargetType="ListBoxItem">
-                <Setter Property="Background" Value="{ThemeResource ApplicationDarkGrayColor}"/>
                 <Setter Property="Margin" Value="5"/>
-                <Setter Property="Padding" Value="10"/>
+                <Setter Property="Padding" Value="8"/>
+                <Setter Property="Background" Value="{ThemeResource ApplicationDarkGrayColor}"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                <Setter Property="VerticalAlignment" Value="Stretch"/>
             </Style>
 
             <Style x:Name="ApplicationComboBox" TargetType="ComboBox">
